too long image text stays above the edit and delete links, fix the style

--- a/src/Orchard.Web/Modules/Orchard.MediaLibrary/Styles/media-library-picker-admin.css
+++ b/src/Orchard.Web/Modules/Orchard.MediaLibrary/Styles/media-library-picker-admin.css
@@ -49,12 +49,16 @@
     font-size: 12px;
     opacity: 0.6;
     height: 40px;
+    overflow: hidden;
 }
 
 .overlay h3 {
     padding-right:5px;
     font-size: 12px;
     overflow: hidden;
+    height: 1rem;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .overlay .publication-status {
